# SwigTestBed

./: .gitignore  CMakeLists.txt  Model.cpp  Model.hpp  Model.i  README.md  conanfile.txt  std_filesystem.i
python/: test_python.py
ruby/: test_ruby.rb
tests/: expected.json
